# sku-sleuth

./: .gitattributes  .gitignore  README.md  app.py  gates.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
examples/failing_run/: comparison_report.json  decoded.jsonl  eval_report.json  eval_report.md  gate_report.json  load_result.json  manifest.json  raw_products.csv  run_meta.json
examples/passing_run/: decoded.jsonl  eval_report.json  eval_report.md  gate_report.json  lineage_comparison_report.json  lineage_report.json  load_result.json  manifest.json  reconciliation_report.json  rejects.jsonl  run_meta.json  schema_report.json
scripts/: check.ps1  check.sh  run_pipeline.py  update_golden.py
seeds/: GOLD_SET.md  brands.json  catalog.csv  gold_set.jsonl  stub_model_fixture.json
src/sku_sleuth/: __init__.py  compare.py  engine.py  evaluate.py  gates.py  generate.py  load.py  models.py  schema.py  validate.py
src/sku_sleuth/tiers/: catalog.py  model.py  rules.py
tests/: test_app.py  test_brands_seed.py  test_compare.py  test_engine.py  test_evaluate.py  test_examples.py  test_gates.py  test_generate.py  test_gold_seed.py  test_golden_regression.py  test_identity.py  test_load.py  test_models.py  test_run_pipeline.py  test_scaffold.py  test_schema.py  test_tier_catalog.py  test_tier_model.py  test_tier_rules.py  test_validate.py
tests/golden/: gold_outcomes.json
