[project]
name = "sku-sleuth"
version = "0.1.0"
description = "Synthetic product classification with quality gates, lineage, schema drift, and reconciliation"
requires-python = ">=3.12"
authors = [{ name = "Charles Lucas" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["data-quality", "lineage", "schema-drift", "streamlit", "reconciliation"]
dependencies = ["streamlit>=1.40"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[dependency-groups]
# ruff capped below 0.9 so the checked-in lint/format expectations stay stable across ruff releases
dev = ["pytest>=8.3", "ruff>=0.8,<0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sku_sleuth"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
